k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tms-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: api.thesis.acetel.edu.ng
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tms-laravel-service
            port:
              number: 8000
